--- a/app/views/comments/_form.js.erb
+++ b/app/views/comments/_form.js.erb
@@ -1,4 +1,4 @@
 <p>
-  <%= label :comment, :body, 'Comment' %>
+  <%= label :comment, :body, t('comments.comment') %>
   <%= f.text_area :body %>
 </p>
