--- a/app/views/teams/show.html.haml
+++ b/app/views/teams/show.html.haml
@@ -1,10 +1,14 @@
-- title '{first_name} and {second_name}'[:user_and_user, h(@team_members.first.name), h(@team_members.last.name)], :show => true
+- translated = t('teams.player_and_player')
+- translated = translated.gsub('{first}', h(@team_members.first.name))
+- translated = translated.gsub('{second}', h(@team_members.last.name))
+
+- title translated, :show => true
 
 #graph
-  %h3= 'Ranking chart'[]
+  %h3= t('teams.ranking_chart')
   - form_tag game_team_path(current_game, @ids.join(',')), :method => :get do
     = select_tag('period', options_for_select(time_periods, @time_period), :onchange => 'this.form.submit();')
-    = submit_tag 'Update'[]
+    = submit_tag t('teams.update')
 
   .legend
     - @team_members.sort_by(&:id).each_with_index do |player, index|
@@ -23,34 +27,34 @@
             = link_to image_tag(user.mugshot.public_filename(:thumb), :alt => h(user.name)), game_user_path(current_game, user)
           = link_to h(user.name), game_user_path(current_game, user)
 
-    .matchlink= link_to image_tag('icons/game.png', :class => 'team', :alt => "Show this team's matches"[]) + ' ' + 'Show matches'[], game_matches_path(current_game, :filter => @ids.join(','))
+    .matchlink= link_to image_tag('icons/game.png', :class => 'team', :alt => t('teams.show_teams_matches')) + ' ' + t('teams.show_matches'), game_matches_path(current_game, :filter => @ids.join(','))
 
     %table.for_against
       %tr
         %td.for
-          %label= 'Played'[] + ':'
+          %label= t('teams.played') + ':'
           = @opponents.sum { |o| o.matches.to_i }
         %td.against
-          %label= 'Win %'[] + ':'
+          %label= t('teams.win_percentage') + ':'
           = number_to_percentage((@opponents.sum { |o| o.wins.to_f } / @opponents.sum { |o| o.matches.to_f }) * 100, :precision => 1)
 
       %tr
         %td.for
-          %label= 'Won'[] + ':'
+          %label= t('teams.won') + ':'
           = @opponents.sum { |o| o.wins.to_i }
         %td.against
-          %label= 'Lost'[] + ':'
+          %label= t('teams.lost') + ':'
           = @opponents.sum { |o| o.matches.to_i } - @opponents.sum { |o| o.wins.to_i }
     
     #opponents
-      %h3= 'Opponents'[]
+      %h3= t('teams.opponents')
       - @opponents.each do |opponent|
         .opponent{ :class => cycle('even', 'odd') }
           .members
             = link_to Team.team_members(opponent.team_ids).collect { |user| h(user.display_name) }.join(', '), game_team_path(current_game, opponent.team_ids)
-          %label= 'Matches'[] + ':'
+          %label= t('teams.matches') + ':'
           = opponent.matches
-          %label= 'Won'[] + ':'
+          %label= t('teams.won') + ':'
           = opponent.wins
 
 - content_for :head do
