--- a/app/views/accounts/edit.html.haml
+++ b/app/views/accounts/edit.html.haml
@@ -1,21 +1,21 @@
-- title 'Account settings', :show => true
+- title t('accounts.settings'), :show => true
 
 = error_messages_for :account
 
 - form_for current_account do |f|
-  %h3= 'Basics'[]
+  %h3= t('accounts.basics')
   %table.form
     %tr
-      %td.label= 'Name'[]
+      %td.label= t('accounts.name')
       %td.field
         = f.text_field :name, :class => 'text required'
 
     %tr
-      %td.label= 'Time zone'[]
+      %td.label= t('accounts.time_zone')
       %td.field
         = f.time_zone_select :time_zone, nil, :class => 'required'
-        .notes= 'Default time zone for users in the account.'[]
+        .notes= t('accounts.time_zone_help')
     
     %tr
       %td.label &nbsp;
-      %td.submit= submit_tag 'Update'
+      %td.submit= submit_tag t('accounts.update')
