--- a/app/views/comparisons/index.html.haml
+++ b/app/views/comparisons/index.html.haml
@@ -1,11 +1,11 @@
 - if @selected_player_ids.size > 0
   #graph
-    %h3= t('compare.ranking_chart')
+    %h3= 'Ranking chart'[]
     - form_tag game_comparisons_path(current_game), :method => :get do
       - @selected_player_ids.each do |player_id|
         = hidden_field_tag 'user[]', player_id
       = select_tag('period', options_for_select(time_periods, @time_period), :onchange => 'this.form.submit();')
-      = submit_tag t('compare.update')
+      = submit_tag 'Update'[]
     
     .legend
       - @indexed_sorted_players.each do |isp|
@@ -15,7 +15,7 @@
 
     = graph(formatted_game_comparison_url(current_game, @selected_player_ids.join('-'), :chart, :period => @time_period))
 - else
-  #graph= t('compare.select_users')
+  #graph= 'Please select users to compare to the right.'[]
 
 - content_for :sidebar do
   - form_tag game_comparisons_path(@game), :method => :get, :id => 'compare_users' do
@@ -24,4 +24,7 @@
         = check_box_tag 'user[]', player.id, @selected_player_ids.include?(player.id), :id => "user_#{player.id}"
         = label_tag "user_#{player.id}", player.name
         
-    = submit_tag t('compare.compare')
+    = submit_tag 'Compare'[]
+    
+- content_for :head do
+  = javascript_include_tag 'swfobject'
