--- a/app/views/dashboard/index.html.haml
+++ b/app/views/dashboard/index.html.haml
@@ -1,4 +1,4 @@
-- title t('dashboard.dashboard')
+- title 'Dashboard'[]
 
 - if @logs.size > 0
   = render :partial => 'logs', :locals => { :logs => @logs }
@@ -6,48 +6,48 @@
 - form_tag game_comparisons_path(current_game), :method => :get do
   #leaderboards
     - if @rankings.size > 0
-      = render :partial => 'leaderboard', :locals => { :game_participations => @rankings, :start_at => 1, :title => t('dashboard.leader_boards.rankings'), :details => '', :board_id => 'rankings' }
+      = render :partial => 'leaderboard', :locals => { :game_participations => @rankings, :start_at => 1, :title => 'Rankings'[], :details => '', :board_id => 'rankings' }
 
     - if @newbies.size > 0
-      = render :partial => 'leaderboard', :locals => { :game_participations => @newbies, :start_at => @rankings.size + 1, :title => t('dashboard.leader_boards.newbies'), :details => "- " + t('dashboard.leader_boards.newbie_limit').gsub('{limit}', @game.newbie_limit.to_s), :board_id => 'newbies' }
+      = render :partial => 'leaderboard', :locals => { :game_participations => @newbies, :start_at => @rankings.size + 1, :title => 'Newbies'[], :details => "- less than {limit} matches"[:less_than_matches, @game.newbie_limit], :board_id => 'newbies' }
 
 - if @recent_matches.size > 0
   = render :partial => 'recent_matches', :locals => { :recent_matches => @recent_matches }
 - else
-  #no_data= t('dashboard.no_matches')
+  #no_data= 'There are no matches in the database yet.'[]
       
 - content_for :sidebar do
   - unless @leader.nil?
     #leader
-      %h3= t('dashboard.leader')
+      %h3= 'Leader'[]
       .mugshot= link_to image_tag(@leader.user.mugshot.public_filename(:thumb), :alt => @leader.user.name), game_user_path(@game, @leader.user) if @leader.user.mugshot
       = user_link_full @game, @leader.user
 
   #counts
-    %h3= t('dashboard.totals.totals')
+    %h3= 'Totals'[]
   
     %table
       %tr
         %td
-          %label= t('dashboard.totals.matches') + ':'
+          %label= 'Matches'[] + ':'
           = @match_count
         %td
-          %label= t('dashboard.totals.points') + ':'
+          %label= 'Points'[] + ':'
           = @points
       - unless @all_time_high.nil? && @all_time_low.nil?
         %tr
           %td
             - unless @all_time_high.nil?
-              %label= t('dashboard.totals.all_time_high') + ':'
+              %label= 'All time high'[] + ':'
               = link_to @all_time_high.current_ranking, game_match_path(@game, @all_time_high.team.match), :class => 'match'
-              = t('dashboard.totals.by')
+              = 'by'[]
               %br
               = user_link @game, find_user(@all_time_high.user_id)
           %td
             - unless @all_time_low.nil?
-              %label= t('dashboard.totals.all_time_low') + ':'
+              %label= 'All time low'[] + ':'
               = link_to @all_time_low.current_ranking, game_match_path(@game, @all_time_low.team.match), :class => 'match'
-              = t('dashboard.totals.by')
+              = 'by'[]
               %br
               = user_link @game, find_user(@all_time_low.user_id)
 
@@ -55,12 +55,12 @@
       = render :partial => 'matches/per_day', :locals => { :matches_per_day => @matches_per_day }
       
     #news
-      %h3= t('dashboard.news')
+      %h3= 'News'[]
       %ul
         - @news.each do |news|
           %li
             = link_to news.name, news.url
-            %span= I18n.l(news.posted_at.to_date, :format => :long)
+            %span= news.posted_at.to_date.to_s :long
       
 #dashboard_data
   - if @logs && @logs.first
