Move Google Analytics below other javascript

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -61,3 +61,4 @@
       .column.span-24= render :partial => 'shared/footer'
 
     = javascript_include_merged
+    = render :partial => 'shared/google_analytics' unless Rails.env == 'development'
