Remove matches per day chart

--- a/public/stylesheets/sass/screen.sass
+++ b/public/stylesheets/sass/screen.sass
@@ -814,8 +814,8 @@ table.form
       .matches_played
         :text-align right
 
-      img.chart
-        :margin-top 1em
+      .list
+        :margin-top 0.5em
 
     #opponents
       h3
