Use absolute paths for css images

--- a/public/stylesheets/sass/screen.sass
+++ b/public/stylesheets/sass/screen.sass
@@ -23,7 +23,7 @@ textarea
 
 #hd
   :background-color #3399CC
-  :background-image url('../images/header_right.gif')
+  :background-image url('/images/header_right.gif')
   :background-repeat no-repeat
   :background-position right top
   
@@ -32,7 +32,7 @@ textarea
     :padding 21px
     :padding-top 14px
     :padding-bottom 8px
-    :background-image url('../images/header_left.gif')
+    :background-image url('/images/header_left.gif')
     :background-repeat no-repeat
     :background-position left top
     :border-bottom 1px solid #FFFFFF
@@ -92,11 +92,11 @@ textarea
     li
       :display inline
       :float left
-      :background url('../images/tab_right.gif') no-repeat right top
+      :background url('/images/tab_right.gif') no-repeat right top
       :margin-right 4px
     
       &:hover
-        :background-image url('../images/tab_active_right.gif')
+        :background-image url('/images/tab_active_right.gif')
 
       a
         :background-color #3399CC
@@ -106,18 +106,18 @@ textarea
         :font-weight bold
         :display block
         :float left
-        :background url('../images/tab_left.gif') no-repeat left top
+        :background url('/images/tab_left.gif') no-repeat left top
         :padding 5px 15px
       
         &:hover
-          :background-image url('../images/tab_active_left.gif')
+          :background-image url('/images/tab_active_left.gif')
           :color #7C7C7C
 
     li.current
-      :background-image url('../images/tab_active_right.gif')
+      :background-image url('/images/tab_active_right.gif')
     
       a
-        :background-image url('../images/tab_active_left.gif')
+        :background-image url('/images/tab_active_left.gif')
         :color #7C7C7C
         
     li.admin
