--- a/public/stylesheets/screen.css
+++ b/public/stylesheets/screen.css
@@ -22,7 +22,7 @@ textarea {
 
 #hd {
   background-color: #3399CC;
-  background-image: url('../images/header_right.gif');
+  background-image: url('/images/header_right.gif');
   background-repeat: no-repeat;
   background-position: right top; }
   #hd #logo {
@@ -30,7 +30,7 @@ textarea {
     padding: 21px;
     padding-top: 14px;
     padding-bottom: 8px;
-    background-image: url('../images/header_left.gif');
+    background-image: url('/images/header_left.gif');
     background-repeat: no-repeat;
     background-position: left top;
     border-bottom: 1px solid #FFFFFF; }
@@ -78,10 +78,10 @@ textarea {
     #menu ul li {
       display: inline;
       float: left;
-      background: url('../images/tab_right.gif') no-repeat right top;
+      background: url('/images/tab_right.gif') no-repeat right top;
       margin-right: 4px; }
       #menu ul li:hover {
-        background-image: url('../images/tab_active_right.gif'); }
+        background-image: url('/images/tab_active_right.gif'); }
       #menu ul li a {
         background-color: #3399CC;
         border-bottom: none;
@@ -90,15 +90,15 @@ textarea {
         font-weight: bold;
         display: block;
         float: left;
-        background: url('../images/tab_left.gif') no-repeat left top;
+        background: url('/images/tab_left.gif') no-repeat left top;
         padding: 5px 15px; }
         #menu ul li a:hover {
-          background-image: url('../images/tab_active_left.gif');
+          background-image: url('/images/tab_active_left.gif');
           color: #7C7C7C; }
     #menu ul li.current {
-      background-image: url('../images/tab_active_right.gif'); }
+      background-image: url('/images/tab_active_right.gif'); }
       #menu ul li.current a {
-        background-image: url('../images/tab_active_left.gif');
+        background-image: url('/images/tab_active_left.gif');
         color: #7C7C7C; }
     #menu ul li.admin {
       margin-left: 3em; }
