--- a/public/stylesheets/sass/screen.sass
+++ b/public/stylesheets/sass/screen.sass
@@ -193,7 +193,7 @@ h2#page_title
   :font-weight bold
   :margin-top 1em
   :margin-bottom 0
-  :background transparent url(../images/h2_bg.gif) repeat-x scroll 0px 4px
+  :background transparent url(/images/h2_bg.gif) repeat-x scroll 0px 4px
   
   span
     :background #FFFFFF none repeat scroll 0% 0%
@@ -243,7 +243,7 @@ table.form
       :height 7em
       
     input.required
-      :background-image url(../images/required_bg.gif)
+      :background-image url(/images/required_bg.gif)
       :background-repeat no-repeat
       :background-position top right
       
@@ -285,7 +285,7 @@ table.form
       :padding-right 5px
 
       &.header
-        :background-image url(../images/sort_none.gif)
+        :background-image url(/images/sort_none.gif)
         :cursor pointer
         :font-weight bold
         :background-repeat no-repeat
@@ -294,11 +294,11 @@ table.form
         :margin-left -1px
 
       &.headerSortUp
-        :background-image url(../images/sort_asc.gif)
+        :background-image url(/images/sort_asc.gif)
         :background-color #3399CC
 
       &.headerSortDown
-        :background-image url(../images/sort_desc.gif)
+        :background-image url(/images/sort_desc.gif)
         :background-color #3399CC
 
       a
