--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -6,7 +6,7 @@
     - form_tag game_user_path(current_game, @user), :method => :get do
       = select_tag('period', options_for_select(time_periods, @time_period), :onchange => 'this.form.submit();')
       = submit_tag 'Update'[]
-    = graph(formatted_game_user_matches_url(@game, @user.id, :chart, :period => @time_period))
+    = graph(game_user_matches_url(@game, @user.id, :period => @time_period, :format => :chart))
     
 - if @game.team_size == 2
   .list
