--- a/app/views/dashboard/_leaderboard.html.haml
+++ b/app/views/dashboard/_leaderboard.html.haml
@@ -26,8 +26,8 @@
           - if start_at == 1
             %td
               - if game_participation.user.created_at <= 7.days.ago
-                = position_icon(@positions[game_participation.user_id])
-                = '(' + @positions[game_participation.user_id][:then].to_s + ')' unless @positions[game_participation.user_id].blank?
+                = position_icon(positions[game_participation.user_id])
+                = '(' + positions[game_participation.user_id][:then].to_s + ')' unless positions[game_participation.user_id].blank?
               - else
                 &nbsp;
           %td
