--- a/app/views/dashboard/_logs.html.haml
+++ b/app/views/dashboard/_logs.html.haml
@@ -3,8 +3,8 @@
   
   %h3= 'Events'[]
   .list
-    - @logs.each do |log|
-      %span.log{ :class => log == @logs.last ? 'last' : nil }
+    - logs.each do |log|
+      %span.log{ :class => log == logs.last ? 'last' : nil }
         = log_link log
         
 - content_for :head do
