--- a/app/views/dashboard/index.html.haml
+++ b/app/views/dashboard/index.html.haml
@@ -1,68 +1,72 @@
 - title 'Dashboard'[]
 
-- if @logs.size > 0
-  = render :partial => 'logs', :locals => { :logs => @logs }
+- cache([game, last_update_cache_key, 'dashboard']) do
+  - if logs.size > 0
+    = render :partial => 'logs', :locals => { :logs => logs }
 
-- form_tag game_comparisons_path(current_game), :method => :get do
-  #leaderboards
-    - if @rankings.size > 0
-      = render :partial => 'leaderboard', :locals => { :game_participations => @rankings, :start_at => 1, :title => 'Rankings'[], :details => '', :board_id => 'rankings' }
+  - form_tag game_comparisons_path(current_game), :method => :get do
+    #leaderboards
+      - if rankings.size > 0
+        = render :partial => 'leaderboard', :locals => { :game_participations => rankings, :start_at => 1, :title => 'Rankings'[], :details => '', :board_id => 'rankings' }
 
-    - if @newbies.size > 0
-      = render :partial => 'leaderboard', :locals => { :game_participations => @newbies, :start_at => @rankings.size + 1, :title => 'Newbies'[], :details => "- less than {limit} matches"[:less_than_matches, @game.newbie_limit], :board_id => 'newbies' }
+      - if newbies.size > 0
+        = render :partial => 'leaderboard', :locals => { :game_participations => newbies, :start_at => rankings.size + 1, :title => 'Newbies'[], :details => "- less than {limit} matches"[:less_than_matches, game.newbie_limit], :board_id => 'newbies' }
 
-- if @recent_matches.size > 0
-  = render :partial => 'recent_matches', :locals => { :recent_matches => @recent_matches }
-- else
-  #no_data= 'There are no matches in the database yet.'[]
-      
-- content_for :sidebar do
-  - unless @leader.nil?
-    #leader
-      %h3= 'Leader'[]
-      .mugshot= link_to image_tag(@leader.user.mugshot.public_filename(:thumb), :alt => @leader.user.name), game_user_path(@game, @leader.user) if @leader.user.mugshot
-      = user_link_full @game, @leader.user
-
-  #counts
-    %h3= 'Totals'[]
+  - if recent_matches.size > 0
+    = render :partial => 'recent_matches', :locals => { :recent_matches => recent_matches }
+  - else
+    #no_data= 'There are no matches in the database yet.'[]
+    
   
-    %table
-      %tr
-        %td
-          %label= 'Matches'[] + ':'
-          = @match_count
-        %td
-          %label= 'Points'[] + ':'
-          = @points
-      - unless @all_time_high.nil? && @all_time_low.nil?
+- content_for :sidebar do
+  - cache([game, last_update_cache_key, 'sidebar']) do
+    - unless leader.nil?
+      #leader
+        %h3= 'Leader'[]
+        .mugshot= link_to image_tag(leader.user.mugshot.public_filename(:thumb), :alt => leader.user.name), game_user_path(game, leader.user) if leader.user.mugshot
+        = user_link_full game, leader.user
+
+    #counts
+      %h3= 'Totals'[]
+  
+      %table
         %tr
           %td
-            - unless @all_time_high.nil?
-              %label= 'All time high'[] + ':'
-              = link_to @all_time_high.current_ranking, game_match_path(@game, @all_time_high.team.match), :class => 'match'
-              = 'by'[]
-              %br
-              = user_link @game, find_user(@all_time_high.user_id)
+            %label= 'Matches'[] + ':'
+            = match_count
           %td
-            - unless @all_time_low.nil?
-              %label= 'All time low'[] + ':'
-              = link_to @all_time_low.current_ranking, game_match_path(@game, @all_time_low.team.match), :class => 'match'
-              = 'by'[]
-              %br
-              = user_link @game, find_user(@all_time_low.user_id)
+            %label= 'Points'[] + ':'
+            = points
+        - unless all_time_high.nil? && all_time_low.nil?
+          %tr
+            %td
+              - unless all_time_high.nil?
+                %label= 'All time high'[] + ':'
+                = link_to all_time_high.current_ranking, game_match_path(game, all_time_high.team.match), :class => 'match'
+                = 'by'[]
+                %br
+                = user_link game, find_user(all_time_high.user_id)
+            %td
+              - unless all_time_low.nil?
+                %label= 'All time low'[] + ':'
+                = link_to all_time_low.current_ranking, game_match_path(game, all_time_low.team.match), :class => 'match'
+                = 'by'[]
+                %br
+                = user_link game, find_user(all_time_low.user_id)
 
-    - if @matches_per_day.size > 0
-      = render :partial => 'matches/per_day', :locals => { :matches_per_day => @matches_per_day }
+      - if matches_per_day.size > 0
+        = render :partial => 'matches/per_day', :locals => { :matches_per_day => matches_per_day }
       
-    #news
-      %h3= 'News'[]
-      %ul
-        - @news.each do |news|
-          %li
-            = link_to news.name, news.url
-            %span= news.posted_at.to_date.to_s :long
+      - if news.size > 0
+        #news
+          %h3= 'News'[]
+          %ul
+            - news.each do |news|
+              %li
+                = link_to news.name, news.url
+                %span= news.posted_at.to_date.to_s :long
       
 #dashboard_data
-  - if @logs && @logs.first
-    .last_update= @logs.first.published_at.to_s(:db)
-  .game_id= @game.id
+  - if logs && logs.first
+    .last_update= last_update
+  .game_id= game.id
