--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -22,7 +22,7 @@
         - unless current_game.nil? || current_game.new_record?
           #add_match.column.span-4.last
             - if enabled_users.size >= current_game.team_size * 2
-              = link_to_function image_tag('icons/add.png') + ' ' + 'Add match'[], "scoreKeeper.newMatch.toggle();"
+              = link_to_function image_tag('icons/add.png') + ' ' + 'Add match'[], "scoreKeeper.newMatch.toggle()"
             - else
               - if current_game.team_size * 2 - enabled_users.size == 1
                 #user_minimum= 'Add one more user'[:add_one_more_user]
