Use CSS sprites

--- a/app/views/dashboard/_logs.html.haml
+++ b/app/views/dashboard/_logs.html.haml
@@ -1,5 +1,5 @@
 #logs
-  = link_to image_tag('rss.gif'), log_feed_url(current_game), :class => 'rss'
+  = link_to css_image_tag('rss.gif'), log_feed_url(current_game), :class => 'rss'
   
   %h3= 'Events'[]
   .list
