--- a/app/views/dashboard/_leaderboard.html.haml
+++ b/app/views/dashboard/_leaderboard.html.haml
@@ -31,7 +31,7 @@
               - else
                 &nbsp;
           %td
-            = link_to image_tag('icons/game.png', :class => 'team', :alt => "Show this user's matches"[]), game_matches_path(@game, :filter => game_participation.user_id)
+            = link_to css_image_tag('icons/game.png', :class => 'team', :title => "Show this user's matches"[]), game_matches_path(@game, :filter => game_participation.user_id)
             = user_link_full(@game, game_participation.user)
           %td= game_participation.ranking
           %td= game_participation.matches_played
