--- a/app/views/matches/_match_columns.html.haml
+++ b/app/views/matches/_match_columns.html.haml
@@ -1,24 +1,24 @@
 - sorted_teams = Match.sort_teams_by_filter(match.teams, params[:filter])
 
 %td.members
-  = link_to image_tag('icons/game.png', :class => 'team', :alt => "Show this team's matches"[]), game_matches_path(:game_id => match.game_id, :filter => sorted_teams.first.team_ids)
+  = link_to css_image_tag('icons/game.png', :class => 'team', :alt => "Show this team's matches"[]), game_matches_path(:game_id => match.game_id, :filter => sorted_teams.first.team_ids)
   = render :partial => 'matches/members', :locals => { :team => sorted_teams.first }
 
 %td.score{ :nowrap => 'nowrap' }
   - if sorted_teams.first.score > sorted_teams.last.score
-    = image_tag('icons/medal_gold_2.png', :class => 'winner')
+    = css_image_tag('icons/medal_gold_2.png', :class => 'winner')
   - else
-    = image_tag('icons/blank.gif', :width => 16, :height => 16, :class => 'loser')
+    = css_image_tag('icons/blank.gif', :width => 16, :height => 16, :class => 'loser')
   
   = sorted_teams.collect(&:score).join(' - ')
   - if sorted_teams.last.score > sorted_teams.first.score
-    = image_tag('icons/medal_gold_2.png', :class => 'winner')
+    = css_image_tag('icons/medal_gold_2.png', :class => 'winner')
   - else
-    = image_tag('icons/blank.gif', :width => 16, :height => 16, :class => 'loser')
+    = css_image_tag('icons/blank.gif', :width => 16, :height => 16, :class => 'loser')
 
 %td.members
-  = link_to image_tag('icons/game.png', :class => 'team', :alt => "Show this team's matches"[]), game_matches_path(:game_id => match.game_id, :filter => sorted_teams.last.team_ids)
+  = link_to css_image_tag('icons/game.png', :class => 'team', :alt => "Show this team's matches"[]), game_matches_path(:game_id => match.game_id, :filter => sorted_teams.last.team_ids)
   = render :partial => 'matches/members', :locals => { :team => sorted_teams.last }
   
 %td.comments
-  = link_to image_tag('icons/comment.png', :class => 'comments', :alt => 'Comment on this match'[]) + " (#{match.comments_count})", game_match_path(match.game_id, match)
+  = link_to css_image_tag('icons/comment.png', :class => 'comments', :alt => 'Comment on this match'[]) + " (#{match.comments_count})", game_match_path(match.game_id, match)
