--- a/app/views/matches/index.html.haml
+++ b/app/views/matches/index.html.haml
@@ -34,9 +34,9 @@
   = will_paginate @matches
 
   #feeds
-    = link_to image_tag('rss.gif') + ' ' + 'Atom feed (all matches)'[], match_feed_url(current_game), :class => 'rss'
+    = link_to css_image_tag('rss.gif') + ' ' + 'Atom feed (all matches)'[], match_feed_url(current_game), :class => 'rss'
     - unless params[:filter].blank?
-      = link_to image_tag('rss.gif') + ' ' + 'Atom feed (filtered)'[], match_feed_url(current_game, :filter => params[:filter]), :class => 'rss'
+      = link_to css_image_tag('rss.gif') + ' ' + 'Atom feed (filtered)'[], match_feed_url(current_game, :filter => params[:filter]), :class => 'rss'
 
 - content_for :head do
   = auto_discovery_link_tag :atom, match_feed_url(current_game), :title => 'All matches'[]
@@ -50,4 +50,4 @@
     - if @filter.length == 1
       = link_to 'Show user details'[], game_user_path(current_game, @filter.first)
     - elsif @filter.length > 1
-      %p= link_to image_tag('icons/chart_bar.png') + ' ' + 'Show team details'[], game_team_path(current_game, @filter.collect(&:id).join(','))
+      %p= link_to css_image_tag('icons/chart_bar.png') + ' ' + 'Show team details'[], game_team_path(current_game, @filter.collect(&:id).join(','))
