--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -26,8 +26,8 @@
       %tbody
         - @teams.each do |team|
           %tr{ :class => cycle('even', 'odd') }
-            %td= link_to image_tag('icons/game.png', :class => 'team', :alt => "Show this team's matches"[]), game_matches_path(@game, :filter => team[:team].team_ids)
-            %td= link_to image_tag('icons/chart_bar.png', :class => 'team'), game_team_path(@game, team[:team].team_ids)
+            %td= link_to css_image_tag('icons/game.png', :class => 'team', :alt => "Show this team's matches"[]), game_matches_path(@game, :filter => team[:team].team_ids)
+            %td= link_to css_image_tag('icons/chart_bar.png', :class => 'team'), game_team_path(@game, team[:team].team_ids)
             %td= link_to team[:team_mate].name, game_user_path(@game, team[:team_mate])
             %td= team[:team_mate_game_participation].ranking.to_i
             %td= team[:played]
@@ -42,7 +42,7 @@
     - if @user.mugshot
       .mugshot= image_tag @user.mugshot.public_filename(:thumb), :alt => h(@user.name)
     
-    .matchlink= link_to image_tag('icons/game.png', :class => 'team', :alt => "Show this user's matches"[]) + ' ' + 'Show matches'[], game_matches_path(@game, :filter => @user.id)
+    .matchlink= link_to css_image_tag('icons/game.png', :class => 'team', :alt => "Show this user's matches"[]) + ' ' + 'Show matches'[], game_matches_path(@game, :filter => @user.id)
 
     #counts
       %p.position
