--- a/public/stylesheets/sass/screen.sass
+++ b/public/stylesheets/sass/screen.sass
@@ -1,3 +1,6 @@
+.css-sprite
+  :vertical-align text-bottom
+
 a
   :color #3589AF
   :text-decoration none
@@ -70,9 +73,6 @@ textarea
       :padding-right 21px
       :padding-top 9px
       :color #FFFFFF
-    
-      img
-        :vertical-align text-bottom
 
     #user_minimum
       :padding-right 21px
@@ -285,7 +285,7 @@ table.form
       :padding-right 5px
 
       &.header
-        :background-image url('/images/sort_none.gif')
+        :background-image url('/images/icons/sort_none.gif')
         :cursor pointer
         :font-weight bold
         :background-repeat no-repeat
@@ -294,11 +294,11 @@ table.form
         :margin-left -1px
 
       &.headerSortUp
-        :background-image url('/images/sort_asc.gif')
+        :background-image url('/images/icons/sort_asc.gif')
         :background-color #3399CC
 
       &.headerSortDown
-        :background-image url('/images/sort_desc.gif')
+        :background-image url('/images/icons/sort_desc.gif')
         :background-color #3399CC
 
       a
