--- a/public/stylesheets/screen.css
+++ b/public/stylesheets/screen.css
@@ -1,3 +1,6 @@
+.css-sprite {
+  vertical-align: text-bottom; }
+
 a {
   color: #3589AF;
   text-decoration: none; }
@@ -60,8 +63,6 @@ textarea {
       padding-right: 21px;
       padding-top: 9px;
       color: #FFFFFF; }
-      #menu #add_match a img {
-        vertical-align: text-bottom; }
     #menu #add_match #user_minimum {
       padding-right: 21px;
       padding-top: 9px;
@@ -235,7 +236,7 @@ table.form {
       padding-left: 5px;
       padding-right: 5px; }
       .list table th.header {
-        background-image: url('/images/sort_none.gif');
+        background-image: url('/images/icons/sort_none.gif');
         cursor: pointer;
         font-weight: bold;
         background-repeat: no-repeat;
@@ -243,10 +244,10 @@ table.form {
         padding-right: 20px;
         margin-left: -1px; }
       .list table th.headerSortUp {
-        background-image: url('/images/sort_asc.gif');
+        background-image: url('/images/icons/sort_asc.gif');
         background-color: #3399CC; }
       .list table th.headerSortDown {
-        background-image: url('/images/sort_desc.gif');
+        background-image: url('/images/icons/sort_desc.gif');
         background-color: #3399CC; }
       .list table th a {
         color: #CCEEFF; }
