--- a/public/stylesheets/sass/screen.sass
+++ b/public/stylesheets/sass/screen.sass
@@ -1,6 +1,12 @@
 .css-sprite
   :vertical-align text-bottom
 
+#header-right
+  :float right
+
+#header-left
+  :float left
+
 a
   :color #3589AF
   :text-decoration none
@@ -26,18 +32,12 @@ textarea
 
 #hd
   :background-color #3399CC
-  :background-image url('/images/header_right.gif')
-  :background-repeat no-repeat
-  :background-position right top
   
   #logo
     :margin 0
     :padding 21px
     :padding-top 14px
     :padding-bottom 8px
-    :background-image url('/images/header_left.gif')
-    :background-repeat no-repeat
-    :background-position left top
     :border-bottom 1px solid #FFFFFF
     
     a
